kubernetes/app/ingress/ip-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ip-route
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`192.168.1.152`)"
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
