kubernetes/app/ingress/registry.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: registry-route
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`registry.makerov.space`)"
      kind: Rule
      services:
        - name: registry-ui
          port: 8080
